tests/NormalTests/paczka1/fuzzy1/55458087.err
Error in line 1: ldgAg0Mj A0 59,7
Error in line 2: gsIpPlAHTbM A0 56,8
Error in line 4: A0 A625 60,5
Error in line 5: A0 A625 239,0
Error in line 3: vwfvCHAamFL S524 45,1
Error in line 9: ldgAg0Mj A0 234,0
Error in line 14: gsIpPlAHTbM A0 54,5
Error in line 7: NqLA S524 96,5
Error in line 17: YZZi3K A0 66,5
Error in line 15: NqLA A625 90,7
Error in line 19: YZZi3K A0 190,9
Error in line 30: nvKAc A625 -2,3
Error in line 33: A0 A816 26,8
Error in line 36: nvKAc S524 36,8
Error in line 40: A0 A816 16,1
